# ai_demo

./: .gitignore  logging.yaml  main.py  pyproject.toml
script/: milvus_embedding_test.py  milvus_test.py  model_test.py
src/ai_demo/: main.py
src/ai_demo/langchain/: langchain_demo.py  minimax_demo.py
src/web/: main.py
