[project]
name = "ai-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "openai>=2.29.0",
    "pymilvus[milvus-lite]>=2.6.11",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "setuptools>=69,<70",
    "uvicorn>=0.42.0",
]
