[project]
name = "ai-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "fastapi>=0.135.2",
    "flagembedding==1.3.5",
    "openai>=2.29.0",
    "peft==0.10.0",
    "pymilvus[milvus-lite,model]>=2.6",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "setuptools>=69,<70",
    "torch>=2.11.0",
    "transformers==4.44.2",
    "uvicorn>=0.42.0",
]
